Countries page almost works.

--- a/WorldCities/WorldCities.csproj
+++ b/WorldCities/WorldCities.csproj
@@ -24,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,11 +37,13 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\angular-material.module.ts" />
     <None Remove="ClientApp\src\app\cities\city.ts" />
+    <None Remove="ClientApp\src\app\countries\country.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\angular-material.module.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\cities\city.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\countries\country.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
